--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@smnhgn/vite-plugin-package-version",
+  "name": "vite-plugin-package-version",
   "license": "MIT",
   "description": "vite plugin to load package version into env",
   "version": "0.0.1",
@@ -27,9 +27,8 @@
     "vite": ">=2.0.0-beta.69"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
     "tsup": "^3.12.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.5",
     "vite": "^2.0.0-beta.69"
   }
 }
