--- a/demo/package.json
+++ b/demo/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "example",
+  "name": "demo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview --port 3001"
   },
   "dependencies": {
     "react": "^17.0.0",
