--- a/package.json
+++ b/package.json
@@ -20,16 +20,24 @@
     "dist"
   ],
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "npm run clean && tsup src/index.ts --dts",
+    "clean": "rimraf {dist,package-lock.json,node_modules} && npm i",
+    "test": "jest",
     "dev": "tsup src/index.ts --dts --watch",
-    "dev:client": "npm -C example run dev",
-    "prepublishOnly": "npm run build"
+    "build": "rimraf dist && tsup src/index.ts --dts",
+    "demo:clean": "rimraf demo/{dist,package-lock.json,node_modules} && npm -C demo install",
+    "demo:dev": "npm -C demo run dev",
+    "demo:prod": "npm -C demo run build && npm -C demo run serve",
+    "prepublishOnly": "npm run build && npm run test",
+    "postinstall": "npm run build"
   },
   "peerDependencies": {
     "vite": ">=2.0.0-beta.69"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
+    "jest-dev-server": "^5.0.0",
+    "puppeteer": "^9.0.0",
+    "rimraf": "^3.0.2",
     "tsup": "^3.12.1",
     "typescript": "^4.1.5",
     "vite": "^2.0.0-beta.69"
