feat: update project structure and add esm output

--- a/packages/plugin/tsconfig.json
+++ b/packages/plugin/tsconfig.json
@@ -9,5 +9,6 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true
   },
+  "include": ["src"],
   "exclude": ["**/dist", "**/node_modules", "**/test"]
 }
