--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vite-plugin-package-version",
+  "name": "vite-plugin-package-version-monorepo",
+  "private": true,
   "license": "MIT",
   "description": "vite plugin to load package version into env",
-  "version": "1.0.2",
   "keywords": [
     "vite",
     "typescript",
@@ -15,30 +15,15 @@
     "type": "git",
     "url": "git+https://github.com/smnhgn/vite-plugin-package-version.git"
   },
-  "main": "dist/index.js",
-  "files": [
-    "dist"
+  "workspaces": [
+    "packages/*"
   ],
   "scripts": {
-    "clean": "rimraf {dist,package-lock.json,node_modules} && npm i",
-    "test": "jest",
-    "dev": "tsup src/index.ts --dts --watch",
-    "build": "rimraf dist && tsup src/index.ts --dts",
-    "demo:clean": "rimraf demo/{dist,package-lock.json,node_modules} && npm -C demo install",
-    "demo:dev": "npm -C demo run dev",
-    "demo:prod": "npm -C demo run build && npm -C demo run serve",
-    "prepublishOnly": "npm run build && npm run test"
-  },
-  "peerDependencies": {
-    "vite": ">=2.0.0-beta.69"
+    "test": "jest"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "jest-dev-server": "^5.0.0",
-    "puppeteer": "^9.0.0",
-    "rimraf": "^3.0.2",
-    "tsup": "^3.12.1",
-    "typescript": "^4.1.5",
-    "vite": "^2.0.0-beta.69"
+    "jest": "^29.7.0",
+    "jest-dev-server": "^9.0.2",
+    "puppeteer": "^21.6.1"
   }
 }
